--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -43,6 +43,8 @@
     "@backstage/plugin-techdocs-react": "^1.1.4",
     "@backstage/plugin-user-settings": "^0.7.1",
     "@backstage/theme": "^0.2.18",
+    "@jquad-group/plugin-tekton-pipelines": "0.3.1",
+    "@jquad-group/plugin-tekton-pipelines-common": "0.3.1",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
     "history": "^5.0.0",
