--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,8 @@
     "@backstage/plugin-search-backend-module-pg": "^0.5.4",
     "@backstage/plugin-search-backend-node": "^1.1.4",
     "@backstage/plugin-techdocs-backend": "^1.6.0",
+    "@jquad-group/plugin-tekton-pipelines-backend": "0.3.1",
+    "@jquad-group/plugin-tekton-pipelines-common": "0.3.1",
     "app": "link:../app",
     "better-sqlite3": "^8.0.0",
     "dockerode": "^3.3.1",
