--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
     "@backstage/plugin-auth-backend": "^0.18.1",
     "@backstage/plugin-auth-node": "^0.2.12",
     "@backstage/plugin-catalog-backend": "^1.8.0",
+    "@backstage/plugin-kubernetes-backend": "^0.9.4",
     "@backstage/plugin-permission-common": "^0.7.4",
     "@backstage/plugin-permission-node": "^0.7.6",
     "@backstage/plugin-proxy-backend": "^0.2.37",
